styles.css
body {
    font-family: sans-serif;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #1b2838;
    color: white;
    margin: 0px;
}

.center {
    width: 820px;
    background-color: #0a0f15;
}

.image-container {
    position: relative;
    width: 460px;
    height: 215px;
    overflow: hidden;
}

#cover-img {
    position: absolute;
    left: 0px;
    top: 0px;
}

.blurred {
    filter: blur(50px);
}

.image-blur {
    position: absolute;
    left: 0px;
    top: 0px;
    width: 460px;
    height: 215px;
    background-color: white;
    opacity: 0.0;
}

#submit-button {
    font-size: 12px;
    border-radius: 2px;
    border: none;
    padding: 1px;
    display: inline-block;
    cursor: pointer;
    text-decoration: none !important;
    color: #d2efa9;
    background: linear-gradient( to right, #75b022 5%, #588a1b 95%);
    text-shadow: 1px 1px 0px rgba( 0, 0, 0, 0.3 );

    /* padding: 10px 15px; */
    padding: 10px 30px;
}

#buy-group {
    position: absolute;
    padding: 3px;
    background-color: black;
    width: fit-content;
    top: 80%;
    right: 1%;
}

#price-label {
    font-size: 13px;
    color:  white;
    margin: 0 15px;
}

.buy-game-panel {
    position: relative;
    width: 820px;
    height: 80px;
    border-radius: 5px;
    background: linear-gradient( -60deg, rgba(226,244,255,0.3) 5%,rgba(84, 107, 115, 0.3) 95%);
    margin-bottom: 50px;
}

#game-details-container {
    display: grid;
    grid-template-columns: 460px 1fr;
    padding: 10px;
    box-sizing: border-box;
    margin-bottom: 10px;
}

.details-container {
    margin: 0 20px;

    display: flex;
    flex-direction: column;

    font-size: 11px;
    color: #6c7a83;
}

.details-item {
    display: grid;
    grid-template-columns: 1fr 1.5fr;
    grid-template-rows: auto auto;
    row-gap: 10px;
}

#instructions-item {
    color: white;
    padding-bottom: 15px;
}

.details-label {
    text-transform: uppercase;
}

#tags-list {
    list-style: none;
    margin: 5px 0 0 0;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
}

.tag-list-item {
    background-color: #30424e;
    color: #67c1f5;
    width: fit-content;
    line-height: 19px;
    padding: 0 7px;
    border-radius: 2px;
    margin: 5px;
    font-size: 14px;
}

.tags-panel {
    grid-column: 1/3;
}

#content {
    display: flex;
    flex-direction: row;
}

#left-column {
    display: flex;
    flex-direction: column;
    padding: 10px;
}

#right-column {
    padding: 10px;
}

#name-container {
    grid-column: 1/3;
    margin-bottom: 10px;
    font-size: 24px;
}




#answer-group {
    border: 1px solid #2e3133;
    background-color: #566573;
    color: white;
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto auto;
    position: absolute;
    top: 20px;
    left: 20px;
    font-size: 20px;
}

#answer-box {
    /* linear-gradient( -60deg, rgba(226,244,255,0.3) 5%,rgba(84, 107, 115, 0.3) 95%) */
    background-color: inherit;
    color: inherit;
    border: none;
    width: 400px;
    font-size: 20px;
    cursor: text;
}

#suggestion-box {
    grid-column: 2/3;
}

#suggestion-list {
    list-style: none;
    margin: 0;
    padding: 0;
}

li.suggestion-item:nth-child(even) {
    background-color: #4d5b68;
}

.suggestion-item {
    margin: 0;
    padding: 0;
    font-size: 20px;
}

.suggestion-button {
    margin: 0;
    padding: 1px 2px;
    background-color: inherit;
    border: none;
    color: white;
    font-size: inherit;
    width: 100%;
    text-align: left;
}

.suggestion-button:hover {
    cursor: pointer;
}


.incorrect { 
    background-color: #9b1414 !important;
    color: white !important;
}

.correct {
    background-color: #2e822e !important;
    color: white !important;
}

#answer-box:focus {
    outline: none;
}

#buy-game-text {
    margin-top: 1px;
    margin-right: 5px;
    margin-left: 5px;
}

#past-game-panel {
    background-color: #0a0f15;
}

#past-game-header {
    margin: 0;
    padding: 0;
}

#past-game-list {
    list-style: none;
    display: flex;
    margin: 0;
    padding: 0;
}

.past-game-list-item {
    background-color: #30424e;
    margin: 10px;
    border-radius: 2px;
}

.past-game-link {
    display: block;
    text-align: center;
    width: 50px;
    text-decoration: none;
    color: white;
}

